# go-to-json

./: ChangeLog.md  Makefile  README.md  cabal.project  elm.json  go-to-json.cabal  hw-struct.cabal  index.html  package.yaml  stack.yaml
app/: Main.hs
frontend/: Main.elm  index.html
frontend/src/: Main.elm
go-to-json-exe.jsexe/: index.html  lib.js  out.stats  rts.js
jsbits/: shim.js
src/: Gen.elm  Lib.hs  Main.elm  P.elm
standalone/: index.html
standalone/src/: Gen.elm  Main.elm
